{
    "version": 1,
    "name": "GlobalInput",
    "maps": [
        {
            "name": "Player",
            "id": "414165b4-69ed-45cc-91f1-09c514881850",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "9ba42b76-429e-4494-b4e4-255860ab2044",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftMousePressed",
                    "type": "Button",
                    "id": "0a64ca88-df9d-4501-891d-4cfdc218d3bf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMousePressed",
                    "type": "Button",
                    "id": "649e474e-36f4-40f0-b8cc-c91fb38295b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "649ca614-1c47-4450-9ac2-b5a877e11ddf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "4b70dcc5-5941-4cbd-8158-62de7fdf72ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "c0bb3e67-2e86-4e36-a26d-1b5bee794553",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89b31578-ff76-4e84-9d1b-6199ec5e757e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fea70d4-8587-4f8b-8c7e-70ade24a145e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d82523a-d6a1-4eac-8219-ba17e6f6cc0b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "LeftMousePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56e83e3c-e42e-45ee-9925-030bb2fa28dc",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "LeftMousePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bfe1044-82ec-45be-9899-b6d83eedb674",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "RightMousePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5beb68f-6ac7-4a44-afd9-bb8dddb42eff",
                    "path": "<Touchscreen>/touch1/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "RightMousePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "444c409b-f065-4bb2-94f7-6b70e6c0d1c9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1893ec79-f0b8-46fb-b50d-051c814426c7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c5e99f2-8df6-41c3-8f47-8bc56b3ef753",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}